<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#80b1f5"

    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="287dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/sign_up_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="451dp"
        android:background="@drawable/sign_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fill_out_the_forms_to_continue"
            android:textColor="@color/primary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/enterName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/input_background"
            android:hint="@string/enter_your_phone"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingBottom="30sp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/input_background"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:paddingBottom="30sp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputMobile" />


        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/input_background"
            android:hint="@string/confirm_your_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingStart="20sp"
            android:paddingBottom="30sp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/toSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/have_account"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/signUp"
            app:layout_constraintEnd_toEndOf="@+id/signUp"
            app:layout_constraintStart_toStartOf="@+id/signUp"
            app:layout_constraintTop_toTopOf="@+id/signUp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/signUp"
            android:layout_width="290dp"
            android:layout_height="50sp"
            android:background="@drawable/sign_up_btn_bg"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:fontFamily="@font/fredoka_medium"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/toSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/primary_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.912" />


</androidx.constraintlayout.widget.ConstraintLayout>